experimental/report/testdata/multi-underline.yaml.fancy.txt
error: `size_t` is not a built-in Protobuf type
  --> foo.proto:6:12
   |
 1 | syntax = "proto4"
   |          -------- syntax version specified here
...
 6 |   required size_t x = 0;
   |            ^^^^^

warning: these are pretty bad names
  --> foo.proto:3:9
   |
 3 | package abc.xyz;
   |         ^^^^^^^ could be better
 4 |
 5 | message Blah {
   |         ---- blah to you too!!

encountered 1 error and 1 warning
